--- a/careerportfolio.html
+++ b/careerportfolio.html
@@ -25,18 +25,18 @@
         
         <section id="home" class="hero content-section">
             <div class="container hero-content">
-                <img src="image_decor_1.png" alt="Decorative icon element" class="decor-icon icon-top-left">
+                <img src="tenth.png" alt="Decorative icon element" class="decor-icon icon-top-left">
                 <div class="text-content">
                     <h1 class="main-title">Ayanna Modi</h1> 
                     <h2 class="sub-title">The Computational Empathist: Designing Adaptive Systems in Computer Science</h2>
-                    <p class="tagline">My career goal is to transition into a specialized computer science field focusing on <strong>Computational Empathy</strong>, which is the design of intelligent systems that adapt to human complexity, specifically neurodiversity, using expertise in <strong>HCI and ethical AI</strong>.</p>
+                    <p class="tagline">My career goal is to transition into a specialized computer science field focusing on <strong>Computational Empathy</strong>—the design of intelligent systems that adapt to human complexity, specifically neurodiversity, using expertise in <strong>HCI and ethical AI</strong>.</p>
                     <a href="#research" class="btn-primary">Explore Portfolio</a>
                 </div>
                 <div class="image-box">
                     <img src="first.webp" alt="Professional photo of Ayanna Modi">
                     </div>
 
-                <img src="image_decor_2.png" alt="Decorative icon element" class="decor-icon icon-bottom-right">
+                <img src="eleventh.png" alt="Decorative icon element" class="decor-icon icon-bottom-right">
                 </div>
         </section>
 
@@ -59,6 +59,9 @@
                         <img src="second.webp" alt="Graph showing CS job growth statistics">
                         </div>
                 </div>
+                <div class="sources">
+                    <p><em>Sources (For Presentation Reference): U.S. Bureau of Labor Statistics, IEEE Journal on Accessible Computing.</em></p>
+                </div>
             </div>
         </section>
 
@@ -73,7 +76,7 @@
                 <div class="experience-card">
                     <div class="card-content-grid">
                         <p>This initiative directly contributed to my career interest by demanding <strong>end-to-end product design and implementation</strong>—a core CS skill. I <strong>coded the AI chatbot</strong> and resource site, authored a technical book, and engaged in policy (Chief Minister of Rajasthan), linking software development to real-world deployment and governance.</p>
-                        <img src="image3_dom_screenshot.png" alt="Screenshot of the Do You Mind? website and book cover">
+                        <img src="twelfth.png" alt="Screenshot of the Do You Mind? website and book cover">
                         </div>
                 </div>
                 
@@ -112,7 +115,7 @@
                     <div class="qual-box info-box">
                         <h3>Key Recognition (Aptitude and Leadership)</h3>
                         <ul class="padded-list">
-                            <li><strong>NCWIT Award for Aspirations in Computing (AiC):</strong> Georgia Affiliate Winner, National recognition of technical aptitude and leadership.</li>
+                            <li><strong>NCWIT Award for Aspirations in Computing (AiC):</strong> Georgia Affiliate Winner—National recognition of technical aptitude and leadership.</li>
                             <li><strong>CodeHerWorld Global Competition (1st Place):</strong> Won for the STEM Career Finder app, proving high-level competitive programming proficiency.</li>
                             <li><strong>FBLA State Conference Winner (6x):</strong> Success in events like Career Exploration and Business Ethics proves required professional acumen.</li>
                         </ul>
