--- a/careerportfolio.html
+++ b/careerportfolio.html
@@ -25,7 +25,7 @@
         
         <section id="home" class="hero content-section">
             <div class="container hero-content">
-                <img src="tenth.png" alt="Decorative icon element" class="decor-icon icon-top-left">
+                <img src="tenth.avif" alt="Decorative icon element" class="decor-icon icon-top-left">
                 <div class="text-content">
                     <h1 class="main-title">Ayanna Modi</h1> 
                     <h2 class="sub-title">The Computational Empathist: Designing Adaptive Systems in Computer Science</h2>
