--- a/careerportfolio.html
+++ b/careerportfolio.html
@@ -25,15 +25,15 @@
         
         <section id="home" class="hero content-section">
             <div class="container hero-content">
-                <img src="tenth.avif" alt="Decorative icon element" class="decor-icon icon-top-left">
+                <img src="tenth.png" alt="Decorative icon element" class="decor-icon icon-top-left">
                 <div class="text-content">
                     <h1 class="main-title">Ayanna Modi</h1> 
                     <h2 class="sub-title">The Computational Empathist: Designing Adaptive Systems in Computer Science</h2>
                     <p class="tagline">My career goal is to transition into a specialized computer science field focusing on <strong>Computational Empathy</strong>—the design of intelligent systems that adapt to human complexity, specifically neurodiversity, using expertise in <strong>HCI and ethical AI</strong>.</p>
                     <a href="#research" class="btn-primary">Explore Portfolio</a>
                 </div>
-                <div class="image-box">
-                    <img src="first.webp" alt="Professional photo of Ayanna Modi">
+                <div class="image-box hero-image-box">
+                    <img src="first.webp" alt="Professional photo of Ayanna Modi" class="profile-pic">
                     </div>
 
                 <img src="eleventh.png" alt="Decorative icon element" class="decor-icon icon-bottom-right">
@@ -55,12 +55,9 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="image-box">
+                    <div class="image-box graph-box">
                         <img src="second.webp" alt="Graph showing CS job growth statistics">
                         </div>
-                </div>
-                <div class="sources">
-                    <p><em>Sources (For Presentation Reference): U.S. Bureau of Labor Statistics, IEEE Journal on Accessible Computing.</em></p>
                 </div>
             </div>
         </section>
@@ -74,10 +71,13 @@
                     <h3>Founder and Developer, Do You Mind? (Neuro-Inclusive Tech and Policy)</h3>
                 </div>
                 <div class="experience-card">
-                    <div class="card-content-grid">
+                    <div class="card-content-grid double-image-grid">
                         <p>This initiative directly contributed to my career interest by demanding <strong>end-to-end product design and implementation</strong>—a core CS skill. I <strong>coded the AI chatbot</strong> and resource site, authored a technical book, and engaged in policy (Chief Minister of Rajasthan), linking software development to real-world deployment and governance.</p>
-                        <img src="twelfth.png" alt="Screenshot of the Do You Mind? website and book cover">
-                        </div>
+                        <div class="image-pair-box">
+                            <img src="twelfth.png" alt="Screenshot of the Do You Mind? website and book cover" class="screenshot-img">
+                            <img src="book_cover.png" alt="Book cover image" class="screenshot-img">
+                            </div>
+                    </div>
                 </div>
                 
                 <div class="icon-header">
