--- a/careerportfolio.html
+++ b/careerportfolio.html
@@ -67,7 +67,7 @@
                 <h2>Experience: The Adaptive Systems I Have Built</h2>
                 
                 <div class="icon-header">
-                    <img src="third.jpg" alt="Laptop icon">
+                    <img src="third.png" alt="Laptop icon">
                     <h3>Founder and Developer, Do You Mind? (Neuro-Inclusive Tech and Policy)</h3>
                 </div>
                 <div class="experience-card">
