--- a/careerportfolio.html
+++ b/careerportfolio.html
@@ -61,12 +61,12 @@
                 <div class="content-grid">
                     <div class="research-text">
                         <h3>A Focus on Human-Computer Interaction (HCI) and Ethical AI</h3>
-                        <p>The <strong>long-term outlook</strong> for AI/ML engineers specializing in accessibility and user experience (UX) is exceptionally strong, projected to grow by <strong>over 30 percent</strong> by 2030 (Source 1: U.S. Bureau of Labor Statistics). This niche addresses the vast market gap where technology fails to meet the needs of diverse cognitive styles, particularly those related to neurodiversity. The median annual salary for this field is **$131,490**, requiring advanced technical proficiency combined with pedagogical insight.</p>
+                        <p>The **long-term outlook** for AI/ML engineers specializing in accessibility and user experience (UX) is exceptionally strong, projected to grow by **over 30 percent** by 2030 (Source 1: U.S. Bureau of Labor Statistics). This niche addresses the vast market gap where technology fails to meet the needs of diverse cognitive styles, particularly those related to neurodiversity. The median annual salary for this field is **$131,490**, requiring advanced technical proficiency combined with pedagogical insight.</p>
                         <div class="info-box">
                             <h4>Career Requirements and Obstacles</h4>
                             <ul>
                                 <li><strong>Required Education:</strong> Bachelor’s degree in Computer Science, often followed by a Master’s specializing in HCI or AI/ML.</li>
-                                <li><strong>Typical Responsibilities:</strong> Conducting rigorous user studies, designing and testing adaptive algorithms, ensuring compliance with **Web Content Accessibility Guidelines (WCAG 2.1)** (Source 2: W3C), and managing ethical data deployment.</li>
+                                <li><strong>Typical Responsibilities:</strong> Conducting rigorous user studies, designing and testing adaptive algorithms, ensuring compliance with <strong>Web Content Accessibility Guidelines (WCAG 2.1)</strong> (Source 2: W3C), and managing ethical data deployment.</li>
                                 <li><strong>Potential Challenges:</strong> Navigating the ethical pitfalls of large language models (LLMs) and ensuring data privacy, which requires a strong foundation in digital ethics (Source 3: MIT Press).</li>
                             </ul>
                         </div>
