--- a/careerportfolio.html
+++ b/careerportfolio.html
@@ -66,7 +66,7 @@
                             <h4>Career Requirements and Obstacles</h4>
                             <ul>
                                 <li><strong>Required Education:</strong> Bachelor’s degree in Computer Science, often followed by a Master’s specializing in HCI or AI/ML.</li>
-                                <li><strong>Typical Responsibilities:</strong> Conducting rigorous user studies, designing and testing adaptive algorithms, ensuring compliance with <strong>Web Content Accessibility Guidelines (WCAG 2.1)</strong> (Source 2: W3C), and managing ethical data deployment.</li>
+                                <li><strong>Typical Responsibilities:</strong> Conducting rigorous user studies, designing and testing adaptive algorithms, ensuring compliance with **Web Content Accessibility Guidelines (WCAG 2.1)** (Source 2: W3C), and managing ethical data deployment.</li>
                                 <li><strong>Potential Challenges:</strong> Navigating the ethical pitfalls of large language models (LLMs) and ensuring data privacy, which requires a strong foundation in digital ethics (Source 3: MIT Press).</li>
                             </ul>
                         </div>
