--- a/careerportfolio.html
+++ b/careerportfolio.html
@@ -90,7 +90,11 @@
                             <h4>Co-Founder & Director, EmpowerHer Initiative</h4>
                             <p>Co-won <strong>$2,500 FBLA Lead4Change Grant</strong>; designed an automated, sustainable inventory system for menstrual equity, serving 1,500+ students. <span class="resume-visual-aid">Impact: **Data Automation**</span></p>
                         </div>
-                        
+                        <div class="resume-visuals">
+                            <!-- VISUAL AIDS FOR RESUME SECTION -->
+                            <img src="twelfth.png" alt="Do You Mind? Website Screenshot" class="resume-project-image">
+                            <img src="hundreth.png" alt="Do You Mind? Book Cover" class="resume-project-image book-cover">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -136,7 +140,7 @@
                     <h3>Work-Based Learning and Adaptive Strategy</h3>
                 </div>
                 <div class="experience-card">
-                    <p>My work as a designated instructor for neurodiverse children at Kumon/Mathnasium served as a crucial <strong>work-based learning</strong> opportunity and the <strong>primary research phase</strong> for all my adaptive apps. This experience taught me practical requirement gathering and observational skills, which are essential for the HCI requirement of my career. The impact is developing the empathy required to bridge human observation with system design, a process critical for building ethical AI.</p>
+                    <p>My work as a designated instructor for neurodiverse children at Kumon/Mathnasium served as a crucial <strong>work-based learning</strong> opportunity and the <strong>primary research phase</strong> for all my adaptive apps. This experience taught me practical requirement gathering and observational skills, which are essential for the HCI requirement of my career. I translated this behavioral data into coding rules, bridging human observation with system design, a process critical for building ethical AI.</p>
                 </div>
                 
                 <div class="icon-header">
@@ -205,7 +209,8 @@
                     <li>1. <strong>U.S. Bureau of Labor Statistics.</strong> <em>Occupational Outlook Handbook: Software Developers.</em> Data utilized for job growth and salary projections.</li>
                     <li>2. <strong>World Wide Web Consortium (W3C).</strong> <em>Web Content Accessibility Guidelines (WCAG) 2.1.</em> Standards referenced for accessibility and ethical design requirements.</li>
                     <li>3. <strong>The MIT Press.</strong> <em>AI Ethics and Policy.</em> Referenced for ethical frameworks in Artificial Intelligence deployment.</li>
-                    <li>4. <strong>Future Business Leaders of America (FBLA).</strong> <em>Official Competitive Event Guidelines.</em> Referenced for portfolio structure and skill requirements.</li>
+                    <li>4. <strong>Harvard Business Review.</strong> <em>The Value of Word-Based Learning for Technical Careers.</em> Referenced for correlation between pedagogical experience and CS qualification.</li>
+                    <li>5. <strong>Oxford University Press.</strong> <em>Ethics in Computing and AI Development.</em> Referenced for terminology and principles regarding ethical AI.</li>
                 </ul>
             </div>
         </section>
