--- a/careerportfolio.html
+++ b/careerportfolio.html
@@ -91,9 +91,13 @@
                             <p>Co-won <strong>$2,500 FBLA Lead4Change Grant</strong>; designed an automated, sustainable inventory system for menstrual equity, serving 1,500+ students. <span class="resume-visual-aid">Impact: **Data Automation**</span></p>
                         </div>
                         <div class="resume-visuals">
-                            <!-- VISUAL AIDS FOR RESUME SECTION -->
-                            <img src="twelfth.png" alt="Do You Mind? Website Screenshot" class="resume-project-image">
-                            <img src="hundreth.png" alt="Do You Mind? Book Cover" class="resume-project-image book-cover">
+                            <!-- VISUAL AIDS FOR RESUME SECTION - Now Clickable -->
+                            <a href="#modal-twelfth" class="visual-link">
+                                <img src="twelfth.png" alt="Do You Mind? Website Screenshot" class="resume-project-image">
+                            </a>
+                            <a href="#modal-hundreth" class="visual-link">
+                                <img src="hundreth.png" alt="Do You Mind? Book Cover" class="resume-project-image book-cover">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -140,7 +144,7 @@
                     <h3>Work-Based Learning and Adaptive Strategy</h3>
                 </div>
                 <div class="experience-card">
-                    <p>My work as a designated instructor for neurodiverse children at Kumon/Mathnasium served as a crucial <strong>work-based learning</strong> opportunity and the <strong>primary research phase</strong> for all my adaptive apps. This experience taught me practical requirement gathering and observational skills, which are essential for the HCI requirement of my career. The impact is developing the empathy required to bridge human observation with system design, a process critical for building ethical AI.</p>
+                    <p>My work as a designated instructor for neurodiverse children at Kumon/Mathnasium served as a crucial <strong>work-based learning</strong> opportunity and the <strong>primary research phase</strong> for all my adaptive apps. This experience taught me practical requirement gathering and observational skills, which are essential for the HCI requirement of my career. I translated this behavioral data into coding rules, bridging human observation with system design, a process critical for building ethical AI.</p>
                 </div>
                 
                 <div class="icon-header">
@@ -207,7 +211,7 @@
                 <p>The following compelling, professionally legitimate sources are cited and substantiate the statements made in this portfolio:</p>
                 <ul class="sources-list info-box">
                     <li>1. <strong>U.S. Bureau of Labor Statistics.</strong> <em>Occupational Outlook Handbook: Software Developers.</em> Data utilized for job growth and salary projections.</li>
-                    <li>2. <strong>World Wide Web Consortium (W3C).</strong> <em>Web Content Accessibility Guidelines (WCAG 2.1).</em> Standards referenced for accessibility and ethical design requirements.</li>
+                    <li>2. <strong>World Wide Web Consortium (W3C).</strong> <em>Web Content Accessibility Guidelines (WCAG) 2.1).</em> Standards referenced for accessibility and ethical design requirements.</li>
                     <li>3. <strong>The MIT Press.</strong> <em>AI Ethics and Policy.</em> Referenced for ethical frameworks in Artificial Intelligence deployment.</li>
                     <li>4. <strong>Harvard Business Review.</strong> <em>The Value of Word-Based Learning for Technical Careers.</em> Referenced for correlation between pedagogical experience and CS qualification.</li>
                     <li>5. <strong>Oxford University Press.</strong> <em>Ethics in Computing and AI Development.</em> Referenced for terminology and principles regarding ethical AI.</li>
@@ -217,6 +221,23 @@
 
     </main>
     
+    <!-- MODAL STRUCTURES FOR CLICKABLE IMAGES -->
+    <div id="modal-twelfth" class="modal-overlay">
+        <div class="modal-content">
+            <a href="#resume" class="modal-close">&times;</a>
+            <img src="twelfth.png" alt="Full-sized Do You Mind? Website Screenshot">
+            <p>Screenshot of the "Do You Mind?" website landing page, programmed using JavaScript.</p>
+        </div>
+    </div>
+
+    <div id="modal-hundreth" class="modal-overlay">
+        <div class="modal-content">
+            <a href="#resume" class="modal-close">&times;</a>
+            <img src="hundreth.png" alt="Full-sized Do You Mind? Book Cover">
+            <p>Cover of the technical book, "Innovative Minds," authored as part of the Do You Mind? initiative.</p>
+        </div>
+    </div>
+
     <script src="careerportfolio.js"></script>
 </body>
 </html>
