--- a/careerportfolio.html
+++ b/careerportfolio.html
@@ -145,7 +145,7 @@
                     <h3>Work-Based Learning and Adaptive Strategy</h3>
                 </div>
                 <div class="experience-card">
-                    <p>My work as a designated instructor for neurodiverse children at Kumon/Mathnasium served as a crucial <strong>work-based learning</strong> opportunity and the <strong>primary research phase</strong> for all my adaptive apps. This experience taught me practical requirement gathering and observational skills, which are essential for the HCI requirement of my career. The impact is developing the empathy required to bridge human observation with system design, a process critical for building ethical AI.</p>
+                    <p>My work as a designated instructor for neurodiverse children at Kumon/Mathnasium served as a crucial <strong>work-based learning</strong> opportunity and the <strong>primary research phase</strong> for all my adaptive apps. This experience taught me practical requirement gathering and observational skills, which are essential for the HCI requirement of my career. I translated this behavioral data into coding rules, bridging human observation with system design, a process critical for building ethical AI.</p>
                 </div>
                 
                 <div class="icon-header">
